--- a/index.css
+++ b/index.css
@@ -28,6 +28,18 @@ text-decoration: none;
     display: flex;
     align-items: center;
     justify-content: space-around;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+.boxing{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.inner_box{
+    margin-bottom: 5px;
+    color: var(--color-primary);
 }
 .col{
     color: red;
@@ -784,48 +796,35 @@ h3 {
  }
  /* our products and trusted by  */
  .products{
-    /* display: flex; */
     width: 100%;
     background: #fffef2;
-    /* margin-left: auto;
-    margin-right: auto; */
     margin-bottom: 50px;
  }
- .our_products{
+ .products_1{
     text-align: center;
     font-size: 28px;
  }
- .services{
-    /* display: flex; */
+ .products_2{
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
  }
- .inside_services{
+ .products_3{
     display: flex;
-    /* flex-direction: column; */
     align-items: center;
-    /* margin: 14px 50px; */
-    /* width: 100%; */
-     /* margin-right: auto; */
     margin-left: 150px;  
  }
- .service_name{
-    /* width: 300px; */
-    /* margin-left: auto;
-    margin-right: auto; */
+ .products_4{
     display: flex;
     flex-direction: column;
     margin-right: 50px;
     font-size: 24px;
     color: #000; 
  }
- .service_box{
-    /* position: relative; */
+ .products_5{
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: center; */
     width: 184px;
     height: 160px;
     padding: 10px 7px;
@@ -835,22 +834,16 @@ h3 {
     border-radius: 10px;
     box-shadow: 0 1px 6px rgb(169 188 218 / 65%);
  }
- .service_box:hover{
+ .products_5:hover{
     border-color: red;
     cursor: pointer;
  }
- .find_out{
+ .products_6{
     display: flex;
     color: red;
     font-weight: 700;
  }
- /* .svg_change{
-    fill: none;
-    padding: 1px;
-    width: 60;
-    height: 60;
- }   */
- .companies{
+ .trusted_by{
     margin-bottom: 40px;
  }
  .trust{
@@ -865,42 +858,35 @@ h3 {
     min-width: 100%;
  }
  .companies_logo img{
-    /* margin-top: 40px; */
     width:100px;
-    /* align-items: center; */
  }
- .next_level{
+ .get_started{
     display: flex;
     justify-content: center;
-    /* min-width: 100%; */
-    /* height: 100px; */
     justify-content: space-around;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 30px;
     padding: 20px 0px;
     background-color: #fbdc00;
- 
  }
- .next_level_content{
+ .get_started_1{
     padding: 10px;
  }
- .next_level_content h3{
+ .get_started_1 h3{
     font-size:28px
  }
- .started_button{
+ .get_started_2{
     display: flex;
     align-items: center;
     height: 40px; 
     width: 150px; 
-    /* justify-content: center; */
     background-color: red;
     border:2px solid red;
     border-radius: 5px;
     padding: 5px 14px;
     font-size: 14px;
     font-weight: 700;
-    /* margin-: auto; */
     color: #fff;
     cursor: pointer;
     margin-top: 30px;
