--- a/index.css
+++ b/index.css
@@ -6,6 +6,9 @@ padding: 30px;
 background-size: cover;  
 font-family: sans-serif; 
 }  
+* {
+    box-sizing: border-box;
+}
 header {
 position: fixed;  
 left: 0;  
@@ -47,7 +50,11 @@ text-decoration: none;
 .cont{
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 16px;
+    width: 1200px;
+    background-color: #fffef2;
 }
 .card{
     display: flex;
@@ -93,7 +100,7 @@ body {
 .styles_container{
     width: 1200px;
 }
-.styles-module_container__EvXjS {
+.bl_2 {
     width: 960px;
     padding: 16px;
     margin-right: auto;
@@ -130,7 +137,7 @@ h3 {
     margin-inline-end: 0px;
     font-weight: bold;
 }
-.styles_register_login__F_Jck {
+.cool {
     /* display: flex; */
     align-items: center;
     margin-right: 16px;
@@ -148,7 +155,7 @@ button{
     margin-bottom: 50px;
     background: var(--color-secondary);
 }
-.styles_container__YcS5m.ui_fixed_container {
+.bl.bl_1 {
     width: 1200px;
 }
 .styles_header__sJd0q {
@@ -179,7 +186,7 @@ button{
     align-self: center;
     margin-left: 150px;
 }
-.how_it_works_cont {
+.how_it_works_1 {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -190,12 +197,12 @@ h3 {
     font-size: 28px;
     line-height: 1.2;
 }
-.how_it_works_button {
+.how_it_works_3 {
     display: flex;
     justify-content: space-between;
 }
-.how_it_works_cont
-.For_Cargo_Owners_button {
+.how_it_works_1
+.how_it_works_4 {
     width: 200px;
     padding: 10px;
     margin: 0 20px;
@@ -203,13 +210,13 @@ h3 {
     color: #000!important;
     border-radius: 20px;
 }
-.For_Cargo_Owners_button {
+.how_it_works_4 {
     border-radius: 20px;
     background-color: var(--color-secondary)!important;
     border: var(--color-secondary)!important;
 }
-.how_it_works_cont
-.For_Logistics_Partners_button {
+.how_it_works_1
+.how_it_works_5 {
     width: 200px;
     padding: 10px;
     margin: 0 20px;
@@ -217,37 +224,37 @@ h3 {
     color: #000!important;
     
 }
-.For_Logistics_Partners_button {
+.how_it_works_5 {
     border-radius: 20px;
     background: #e5dfdf!important;
     border: grey!important;
 }
-.styles_container__7cFsf {
+.how_it_works_7 {
     position: relative;
     display: flex;
 }
 div {
     display: block;
 }
-.styles_container__7cFsf {
+.how_it_works_7 {
     position: relative;
     display: flex;
 }
-.styles_stage1__RwgVC {
+.how_it_works_9 {
     margin-bottom: 120px;
 }
-.styles_main__9QKz8 {
+.how_it_works_8 {
     width: 300px;
     padding: 16px;
     border-radius: 10px;
     box-shadow: 0 1px 6px rgb(169 188 218 / 65%);
 }
-.styles_imagecontainer__7Ps6C {
+.ar_2 {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.styles_redtext__qNc_O {
+.hiw {
     font-weight: 600;
     color: #ee3425;
 }
@@ -255,97 +262,97 @@ div {
 p {
     font-size: 16px;
 }
-.styles_heading__GyQVu {
+.hiw_1 {
     display: flex;
     align-items: center;
     padding: 0 0 10px;
     margin: 0;
     list-style-position: outside;
 }
-.styles_main__9QKz8 span {
+.how_it_works_8 span {
     display: flex;
 }
-.styles_para__7I1R1 {
+.hiw_2 {
     padding-bottom: 5px;
     padding-left: 8px;
     margin: 0;
 }
-.styles_arrow1__hJg7v {
+.ar {
     position: absolute;
     top: 104px;
     left: 300px;
 }
-.styles_arrowimage__50gz2 {
+.hiw_4 {
     width: 150px;
     height: 60px;
 }
-.styles_main__9QKz8 span {
+.how_it_works_8 span {
     display: flex;
 }
-.styles_para__7I1R1 {
+.hiw_2 {
     padding-bottom: 5px;
     padding-left: 8px;
     margin: 0;
 }
-.styles_main__9QKz8 {
+.how_it_works_8 {
     width: 300px;
     padding: 16px;
     border-radius: 10px;
     box-shadow: 0 1px 6px rgb(169 188 218 / 65%);
 }
-.styles_arrow2__JOZhk {
+.hiw_5 {
     position: absolute;
     bottom: 116px;
     left: 300px;
 }
-.styles_arrowimage__50gz2 {
+.hiw_4 {
     width: 150px;
     height: 60px;
 }
-.styles_imagecontainer__7Ps6C {
+.ar_2 {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.styles_image__cFHAa {
+.hiw_6 {
     width: 560px;
     height: 320px;
 }
-.styles_arrow3__XQhnr {
+.ll_1 {
     position: absolute;
     top: 104px;
     right: 300px;
 }
-.styles_arrow4__W5PwF {
+.hiw_3 {
     position: absolute;
     right: 300px;
     bottom: 116px;
 }
-.styles_stage3__anVPg {
+.ll_2 {
     margin-bottom: 120px;
 }
 /* blog */
-.styles_container__YcS5m.ui_fixed_container {
+.bl.bl_1 {
     width: 1200px;
 }
-.styles_blog_container__3X_0M {
+.bl_3 {
     display: flex;
     flex-direction: column;
 }
-.styles_heading__n9MVL {
+.bl_4 {
     text-align: center;
 }
 h3 {
     font-size: 28px;
     line-height: 1.2;
 }
-.styles_cards_container__1tjAy {
+.bl_5 {
     display: flex;
     flex-wrap: wrap;
     margin-right: -10px;
     margin-left: -10px;
 }
-.styles_card__qp3LP {
+.bl_7 {
     width: calc(calc(100% / 3) - 20px);
     margin-right: 10px;
     margin-bottom: 40px;
@@ -356,11 +363,11 @@ h3 {
     border-radius: 8px;
     box-shadow: 0 3px 6px hsl(0deg 0% 79% / 50%);
 }
-.styles_card__qp3LP a {
+.bl_7 a {
     color: #000!important;
     text-decoration: none;
 }
-.styles_card_thumbnail__zF8QZ {
+.bl_6 {
     display: block;
     width: 100%;
     height: 200px;
@@ -368,54 +375,54 @@ h3 {
     -o-object-fit: cover;
     object-fit: cover;
 }
-.styles_blog_card_content__eDCmr {
+.nw_1 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     padding: 10px 16px;
 }
-.styles_card_title__D5epU {
+.nw_2 {
     margin-bottom: 5px;
     font-size: 16px!important;
     color: var(--color-primary);
 }
-.styles_card_name__aq9WH {
+.nw_3 {
     margin-bottom: 5px;
     font-size: 18px;
     color: #000!important;
 }
-.styles_overview__Cb6CL {
+.nw_4 {
     max-height: calc(1.4rem * 3);
     overflow: hidden;
 }
-.styles_read_container__C9N_V {
+.nw_5 {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.styles_read_more__6_oMk {
+.nw_6{
     display: flex;
     align-items: center;
     font-weight: 700;
     color: var(--color-primary);
     cursor: pointer;
 }
-.styles_card_title1__MR1j6 {
+.ll_3 {
     margin-bottom: 5px;
     font-size: 14px!important;
     color: #9a9a9a;
 }
-.styles-module_container__EvXjS {
+.bl_2 {
     width: 960px;
     padding: 16px;
     margin-right: auto;
     margin-left: auto;
 }
-.styles_button_container__NubT0 {
+.ll_4{
     justify-content: center;
     text-align: center;
 }
-.ui_button_container.ui_ps_themeType_primary {
+.ll_5.ll_6 {
     color: #fff;
     background-color: var(--color-primary);
     border: 1px solid var(--color-primary);
@@ -641,7 +648,7 @@ h3 {
  .box_upper_footer {
     display: flex;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: left;
     width: 100%;
     padding: 35px 10px 50px;
     font-family: var(--font-family);
@@ -891,3 +898,31 @@ h3 {
     cursor: pointer;
     margin-top: 30px;
  }
+ .subs_curve {
+    background: #060600;
+    margin-bottom: 50px;
+}
+.subs_curve_inner {
+    width: 100%;
+    height: 100px;
+    background-color: rgb(81, 7, 7);
+    border-radius: 18px;
+    border-bottom-right-radius: 100% 150%;
+    border-bottom-left-radius: 100% 150%;
+}
+.curve {
+    background: #fbdc00;
+    margin-top: 10px;
+    margin-bottom: 0px;
+}
+.curve_1 {
+    width: 100%;
+    height: 100px;
+    background-color: #fff;
+    border-radius: 18px;
+    border-bottom-right-radius: 100% 150%;
+    border-bottom-left-radius: 100% 150%;
+}
+.curve_2{
+    background: #fffef2;
+}
